# skpcp

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: pcp.doctree
.doctrees/examples/: examples.doctree
.doctrees/nbsphinx/examples/: examples.ipynb
.github/workflows/: gh-pages.yml  release.yml  test.yml
_modules/: index.html
_modules/skpcp/: pcp.html
api/: pcp.html
docs/: README.md  conf.py  index.rst
docs/_static/: style.css
docs/api/: pcp.rst
docs/examples/: examples.ipynb  examples.rst
examples/: examples.html  examples.ipynb
skpcp/: __init__.py  pcp.py
test/: test_pcp.py
